# blogger

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: docker-image.yml  master_kennethjusino-client.yml
public/: feed.xml  index.html
research-projects/barren-plateaus-local-vs-global-cost/: README.md  pyproject.toml
research-projects/barren-plateaus-local-vs-global-cost/results/: results.csv  summary.json
research-projects/barren-plateaus-local-vs-global-cost/src/barren_plateaus/: __init__.py  circuits.py  experiment.py  gradients.py  plots.py  run_experiment.py  statevector.py  theory.py
research-projects/barren-plateaus-local-vs-global-cost/tests/: test_circuits.py  test_experiment.py  test_gradients.py  test_statevector.py  test_theory.py
research-projects/hypercube-walk-cutoff/: README.md  pyproject.toml
research-projects/hypercube-walk-cutoff/results/: cutoff_scaling_curves.csv  cutoff_scaling_summary.csv  lumping_validation.csv  mc_validation.csv  summary.json
research-projects/hypercube-walk-cutoff/src/hypercube_cutoff/: __init__.py  chain.py  experiment.py  plots.py  run_experiment.py  simulate.py  theory.py
research-projects/hypercube-walk-cutoff/tests/: test_chain.py  test_experiment.py  test_simulate.py  test_theory.py
research-projects/ramanujan-graphs-alon-boppana/: README.md  pyproject.toml  requirements.txt
research-projects/ramanujan-graphs-alon-boppana/results/: exact_validation.csv  generator_cross_validation.csv  summary.csv  summary.json  trials.csv
research-projects/ramanujan-graphs-alon-boppana/src/ramanujan_spectra/: __init__.py  experiment.py  graphs.py  plots.py  run_experiment.py  spectrum.py  theory.py
research-projects/ramanujan-graphs-alon-boppana/tests/: test_experiment.py  test_graphs.py  test_run_experiment.py  test_spectrum.py  test_theory.py
research-projects/spiked-covariance-bbp-transition/: README.md  pyproject.toml
research-projects/spiked-covariance-bbp-transition/results/: results.csv  summary.json
research-projects/spiked-covariance-bbp-transition/src/bbp_transition/: __init__.py  experiment.py  model.py  plots.py  run_experiment.py  theory.py
research-projects/spiked-covariance-bbp-transition/tests/: test_experiment.py  test_model.py  test_theory.py
research-projects/topological-phase-transitions/: README.md  pyproject.toml  requirements.txt
research-projects/topological-phase-transitions/results/: results.csv  summary.json
research-projects/topological-phase-transitions/src/tda_phase_transitions/: __init__.py  cycle_onset.py  experiment.py  graph_models.py  percolation.py  persistence.py  plots.py  run_experiment.py  theory.py
research-projects/topological-phase-transitions/tests/: test_cycle_onset.py  test_graph_models.py  test_integration.py  test_percolation.py  test_persistence.py  test_theory.py
scripts/: buildArticles.js  connect-excel.ts  create-analytics-workbook.ts  generate-og-data.ts
server/: auth.ts  env.ts  index.ts  og.ts  ogTags.ts  rss.ts  tsconfig.json
src/: App.tsx  audioplayer.css  blog.css  index.css  index.tsx  projects.css  videoplayer.css
src/articles/: About.tsx  (+16 more)
(+643 files in other folders)
