[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "bbp-transition"
version = "0.1.0"
description = "Spiked-covariance eigenvalue/eigenvector phase transition vs. the BBP threshold"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests exercising the full simulate-and-fit pipeline",
]
